--- a/index.html
+++ b/index.html
@@ -370,6 +370,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>patc</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>PaPaLarry</td>
+<td>700,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -382,38 +429,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Maryjean</td>
-<td>74,000</td>
+<td>patc</td>
+<td>1,056,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>70,000</td>
+<td>JoAnnmeme</td>
+<td>980,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>PaPaLarry</td>
-<td>61,000</td>
+<td>bill</td>
+<td>950,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>59,000</td>
+<td>Nana_Sharon</td>
+<td>920,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>patc</td>
-<td>56,000</td>
+<td>Maryjean</td>
+<td>874,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>bill</td>
-<td>50,000</td>
+<td>Norma1</td>
+<td>809,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>JoAnnmeme</td>
-<td>30,000</td>
+<td>PaPaLarry</td>
+<td>761,000</td>
 </tr>
 <tr>
 <td>8</td>
