--- a/scores/index.html
+++ b/scores/index.html
@@ -404,6 +404,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="pats-special">Pat's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Norma1</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>PaPaLarry</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -417,37 +459,37 @@
 <tr>
 <td>1</td>
 <td>JoAnnmeme</td>
-<td>40,000</td>
+<td>48,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Norma1</td>
-<td>38,000</td>
-</tr>
-<tr>
-<td>3</td>
 <td>Nana_Sharon</td>
-<td>34,000</td>
+<td>46,000</td>
 </tr>
 <tr>
-<td>4</td>
+<td>3t</td>
+<td>Norma1</td>
+<td>42,000</td>
+</tr>
+<tr>
+<td>3t</td>
 <td>bill</td>
-<td>32,000</td>
+<td>42,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>PaPaLarry</td>
-<td>26,000</td>
+<td>28,000</td>
 </tr>
 <tr>
-<td>6</td>
+<td>6t</td>
 <td>Maryjean</td>
 <td>22,000</td>
 </tr>
 <tr>
-<td>7</td>
+<td>6t</td>
 <td>patc</td>
-<td>16,000</td>
+<td>22,000</td>
 </tr>
 </tbody>
 </table>
