--- a/scores/index.html
+++ b/scores/index.html
@@ -362,6 +362,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -373,39 +410,39 @@
 </thead>
 <tbody>
 <tr>
-<td>1t</td>
-<td>Nana_Sharon</td>
-<td>120,000</td>
+<td>1</td>
+<td>bill</td>
+<td>130,000</td>
 </tr>
 <tr>
-<td>1t</td>
-<td>bill</td>
-<td>120,000</td>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>124,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Norma1</td>
-<td>110,000</td>
+<td>116,000</td>
 </tr>
 <tr>
 <td>4</td>
+<td>PaPaLarry</td>
+<td>112,000</td>
+</tr>
+<tr>
+<td>5</td>
 <td>JoAnnmeme</td>
 <td>102,000</td>
 </tr>
 <tr>
-<td>5</td>
-<td>PaPaLarry</td>
-<td>100,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>patc</td>
+<td>6t</td>
+<td>Maryjean</td>
 <td>62,000</td>
 </tr>
 <tr>
-<td>7</td>
-<td>Maryjean</td>
-<td>54,000</td>
+<td>6t</td>
+<td>patc</td>
+<td>62,000</td>
 </tr>
 </tbody>
 </table>
