--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Maryjean</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Norma1</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -384,38 +431,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>139,000</td>
+<td>Nana_Sharon</td>
+<td>144,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>138,000</td>
+<td>bill</td>
+<td>143,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Norma1</td>
-<td>134,000</td>
+<td>135,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>PaPaLarry</td>
-<td>124,000</td>
+<td>134,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>JoAnnmeme</td>
-<td>108,000</td>
+<td>120,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Maryjean</td>
-<td>76,000</td>
+<td>patc</td>
+<td>80,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>patc</td>
-<td>72,000</td>
+<td>Maryjean</td>
+<td>78,000</td>
 </tr>
 </tbody>
 </table>
