--- a/index.html
+++ b/index.html
@@ -417,6 +417,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="pats-special">Pat's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Norma1</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -429,38 +476,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Nana_Sharon</td>
-<td>144,000</td>
+<td>bill</td>
+<td>147,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>bill</td>
-<td>143,000</td>
+<td>Nana_Sharon</td>
+<td>146,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Norma1</td>
-<td>135,000</td>
+<td>PaPaLarry</td>
+<td>142,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>PaPaLarry</td>
-<td>134,000</td>
+<td>Norma1</td>
+<td>136,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>JoAnnmeme</td>
-<td>120,000</td>
+<td>132,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>patc</td>
-<td>80,000</td>
+<td>Maryjean</td>
+<td>88,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Maryjean</td>
-<td>78,000</td>
+<td>patc</td>
+<td>86,000</td>
 </tr>
 </tbody>
 </table>
