--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>patc</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -380,22 +422,22 @@
 <tr>
 <td>1</td>
 <td>Nana_Sharon</td>
-<td>154,000</td>
+<td>160,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
-<td>151,000</td>
+<td>159,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>PaPaLarry</td>
-<td>144,000</td>
+<td>154,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Norma1</td>
-<td>142,000</td>
+<td>144,000</td>
 </tr>
 <tr>
 <td>5</td>
@@ -405,12 +447,12 @@
 <tr>
 <td>6</td>
 <td>Maryjean</td>
-<td>100,000</td>
+<td>112,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>patc</td>
-<td>96,000</td>
+<td>100,000</td>
 </tr>
 </tbody>
 </table>
