--- a/index.html
+++ b/index.html
@@ -407,6 +407,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="pats-special">Pat's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>patc</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -419,38 +466,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Nana_Sharon</td>
-<td>160,000</td>
+<td>PaPaLarry</td>
+<td>166,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
-<td>159,000</td>
+<td>163,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>PaPaLarry</td>
-<td>154,000</td>
+<td>Nana_Sharon</td>
+<td>161,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Norma1</td>
-<td>144,000</td>
+<td>150,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>JoAnnmeme</td>
-<td>132,000</td>
+<td>142,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Maryjean</td>
-<td>112,000</td>
+<td>120,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>patc</td>
-<td>100,000</td>
+<td>102,000</td>
 </tr>
 </tbody>
 </table>
