--- a/index.html
+++ b/index.html
@@ -412,6 +412,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>PaPaLarry</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -425,37 +467,37 @@
 <tr>
 <td>1</td>
 <td>Norma1</td>
-<td>22,000</td>
+<td>34,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Maryjean</td>
-<td>18,000</td>
+<td>28,000</td>
 </tr>
 <tr>
-<td>3t</td>
+<td>3</td>
 <td>Nana_Sharon</td>
-<td>14,000</td>
+<td>22,000</td>
 </tr>
 <tr>
-<td>3t</td>
+<td>4</td>
 <td>patc</td>
-<td>14,000</td>
+<td>20,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>PaPaLarry</td>
-<td>10,000</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>JoAnnmeme</td>
-<td>4,000</td>
+<td>bill</td>
+<td>7,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>bill</td>
-<td>3,000</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
 </tr>
 </tbody>
 </table>
