--- a/index.html
+++ b/index.html
@@ -407,6 +407,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -420,32 +462,32 @@
 <tr>
 <td>1</td>
 <td>Norma1</td>
-<td>46,000</td>
+<td>58,000</td>
 </tr>
 <tr>
-<td>2t</td>
-<td>Maryjean</td>
-<td>36,000</td>
-</tr>
-<tr>
-<td>2t</td>
+<td>2</td>
 <td>patc</td>
-<td>36,000</td>
+<td>44,000</td>
 </tr>
 <tr>
-<td>4t</td>
-<td>Nana_Sharon</td>
-<td>34,000</td>
+<td>3t</td>
+<td>Maryjean</td>
+<td>40,000</td>
 </tr>
 <tr>
-<td>4t</td>
+<td>3t</td>
 <td>PaPaLarry</td>
-<td>34,000</td>
+<td>40,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>36,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>21,000</td>
+<td>31,000</td>
 </tr>
 <tr>
 <td>7</td>
