--- a/index.html
+++ b/index.html
@@ -407,6 +407,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>gracie</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>patc</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>JoAnnmeme</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -419,28 +461,28 @@
 <tbody>
 <tr>
 <td>1</td>
+<td>Nana_Sharon</td>
+<td>64,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>60,000</td>
+</tr>
+<tr>
+<td>3</td>
 <td>Norma1</td>
 <td>58,000</td>
 </tr>
 <tr>
-<td>2t</td>
-<td>Nana_Sharon</td>
-<td>56,000</td>
-</tr>
-<tr>
-<td>2t</td>
-<td>patc</td>
-<td>56,000</td>
-</tr>
-<tr>
 <td>4</td>
-<td>PaPaLarry</td>
-<td>48,000</td>
+<td>bill</td>
+<td>55,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>bill</td>
-<td>45,000</td>
+<td>PaPaLarry</td>
+<td>54,000</td>
 </tr>
 <tr>
 <td>6</td>
@@ -449,13 +491,13 @@
 </tr>
 <tr>
 <td>7</td>
-<td>JoAnnmeme</td>
-<td>18,000</td>
+<td>gracie</td>
+<td>28,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>gracie</td>
-<td>16,000</td>
+<td>JoAnnmeme</td>
+<td>20,000</td>
 </tr>
 </tbody>
 </table>
