--- a/scores/index.html
+++ b/scores/index.html
@@ -379,8 +379,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>patc</td>
+<td>PaPaLarry</td>
 <td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Maryjean</td>
+<td>750,000</td>
 </tr>
 </tbody>
 </table>
@@ -396,33 +421,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>patc</td>
-<td>1,106,000</td>
+<td>PaPaLarry</td>
+<td>1,090,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
-<td>90,000</td>
+<td>Norma1</td>
+<td>1,036,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Norma1</td>
-<td>86,000</td>
+<td>patc</td>
+<td>1,006,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>bill</td>
-<td>85,000</td>
+<td>935,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Maryjean</td>
-<td>80,000</td>
+<td>Nana_Sharon</td>
+<td>876,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Nana_Sharon</td>
-<td>76,000</td>
+<td>Maryjean</td>
+<td>830,000</td>
 </tr>
 <tr>
 <td>7</td>
