--- a/scores/index.html
+++ b/scores/index.html
@@ -362,7 +362,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
 <table>
 <thead>
 <tr>
@@ -374,12 +374,12 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Nana_Sharon</td>
+<td>PaPaLarry</td>
 <td>12,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
+<td>Nana_Sharon</td>
 <td>10,000</td>
 </tr>
 <tr>
@@ -396,6 +396,43 @@
 <td>5</td>
 <td>Norma1</td>
 <td>4,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>Nana_Sharon</td>
+<td>22,000</td>
+</tr>
+<tr>
+<td>1t</td>
+<td>PaPaLarry</td>
+<td>22,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>16,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Norma1</td>
+<td>8,000</td>
 </tr>
 </tbody>
 </table>
