--- a/scores/index.html
+++ b/scores/index.html
@@ -372,7 +372,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
 <table>
 <thead>
 <tr>
@@ -384,38 +384,85 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Nana_Sharon</td>
-<td>80,000</td>
+<td>patc</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
-<td>78,000</td>
+<td>Maryjean</td>
+<td>10,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Maryjean</td>
-<td>74,000</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
 </tr>
 <tr>
 <td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Norma1</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>Maryjean</td>
+<td>84,000</td>
+</tr>
+<tr>
+<td>1t</td>
 <td>patc</td>
-<td>72,000</td>
+<td>84,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>Nana_Sharon</td>
+<td>82,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>PaPaLarry</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Norma1</td>
-<td>67,000</td>
+<td>68,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>40,000</td>
+<td>46,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>JoAnnmeme</td>
-<td>4,000</td>
+<td>12,000</td>
 </tr>
 </tbody>
 </table>
