--- a/index.html
+++ b/index.html
@@ -365,6 +365,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -378,37 +420,37 @@
 <tr>
 <td>1</td>
 <td>Nana_Sharon</td>
-<td>106,000</td>
+<td>108,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>patc</td>
-<td>96,000</td>
+<td>106,000</td>
 </tr>
 <tr>
 <td>3</td>
+<td>PaPaLarry</td>
+<td>97,000</td>
+</tr>
+<tr>
+<td>4t</td>
 <td>Maryjean</td>
 <td>90,000</td>
 </tr>
 <tr>
-<td>4</td>
-<td>PaPaLarry</td>
-<td>85,000</td>
-</tr>
-<tr>
-<td>5</td>
+<td>4t</td>
 <td>Norma1</td>
-<td>84,000</td>
+<td>90,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>62,000</td>
+<td>66,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>JoAnnmeme</td>
-<td>20,000</td>
+<td>28,000</td>
 </tr>
 </tbody>
 </table>
