--- a/scores/index.html
+++ b/scores/index.html
@@ -409,7 +409,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="larrys-special">Larry's Special</h1>
 <table>
 <thead>
 <tr>
@@ -421,38 +421,80 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Nana_Sharon</td>
-<td>108,000</td>
+<td>bill</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>patc</td>
-<td>106,000</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>PaPaLarry</td>
-<td>97,000</td>
+<td>8,000</td>
 </tr>
 <tr>
-<td>4t</td>
-<td>Maryjean</td>
-<td>90,000</td>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
 </tr>
 <tr>
-<td>4t</td>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
 <td>Norma1</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>Nana_Sharon</td>
+<td>112,000</td>
+</tr>
+<tr>
+<td>1t</td>
+<td>patc</td>
+<td>112,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>105,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>92,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
 <td>90,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>66,000</td>
+<td>78,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>JoAnnmeme</td>
-<td>28,000</td>
+<td>38,000</td>
 </tr>
 </tbody>
 </table>
