--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
 <table>
 <thead>
 <tr>
@@ -387,33 +387,80 @@
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
+<td>Kevin</td>
 <td>10,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>patc</td>
+<td>Norma1</td>
 <td>8,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
+<td>Nana_Sharon</td>
 <td>6,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Nana_Sharon</td>
+<td>bill</td>
 <td>4,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Kevin</td>
+<td>PaPaLarry</td>
 <td>2,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>bill</td>
+<td>patc</td>
 <td>1,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>24,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>14,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>Kevin</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>patc</td>
+<td>9,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>bill</td>
+<td>5,000</td>
 </tr>
 </tbody>
 </table>
