--- a/scores/index.html
+++ b/scores/index.html
@@ -404,6 +404,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>bill</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -417,27 +454,27 @@
 <tr>
 <td>1</td>
 <td>patc</td>
-<td>97,000</td>
+<td>107,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>75,000</td>
+<td>bill</td>
+<td>85,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>73,000</td>
+<td>Nana_Sharon</td>
+<td>79,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>51,000</td>
+<td>PaPaLarry</td>
+<td>53,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>PaPaLarry</td>
-<td>47,000</td>
+<td>Norma1</td>
+<td>51,000</td>
 </tr>
 <tr>
 <td>6</td>
@@ -445,14 +482,14 @@
 <td>45,000</td>
 </tr>
 <tr>
-<td>7</td>
-<td>Kevin</td>
+<td>7t</td>
+<td>JoAnnmeme</td>
 <td>40,000</td>
 </tr>
 <tr>
-<td>8</td>
-<td>JoAnnmeme</td>
-<td>32,000</td>
+<td>7t</td>
+<td>Kevin</td>
+<td>40,000</td>
 </tr>
 </tbody>
 </table>
