--- a/index.html
+++ b/index.html
@@ -402,6 +402,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>patc</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -415,32 +457,32 @@
 <tr>
 <td>1</td>
 <td>patc</td>
-<td>125,000</td>
+<td>129,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>89,000</td>
+<td>bill</td>
+<td>93,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>87,000</td>
+<td>Nana_Sharon</td>
+<td>91,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>PaPaLarry</td>
-<td>73,000</td>
+<td>81,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Maryjean</td>
-<td>61,000</td>
+<td>73,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>JoAnnmeme</td>
-<td>56,000</td>
+<td>66,000</td>
 </tr>
 <tr>
 <td>7</td>
