--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="mjs-special">MJ's Special</h1>
 <table>
 <thead>
 <tr>
@@ -404,28 +404,65 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>20,000</td>
+<td>patc</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>patc</td>
-<td>18,000</td>
+<td>bill</td>
+<td>10,000</td>
 </tr>
 <tr>
-<td>3t</td>
-<td>JoAnnmeme</td>
-<td>16,000</td>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
 </tr>
 <tr>
-<td>3t</td>
+<td>4</td>
 <td>Nana_Sharon</td>
-<td>16,000</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>bill</td>
+<td>30,000</td>
+</tr>
+<tr>
+<td>1t</td>
+<td>patc</td>
+<td>30,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>22,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>20,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>PaPaLarry</td>
-<td>6,000</td>
+<td>14,000</td>
 </tr>
 </tbody>
 </table>
