--- a/index.html
+++ b/index.html
@@ -340,6 +340,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="pot-limit-omaha-hi-lo">Pot limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>patc</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>JoAnnmeme</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -351,34 +393,39 @@
 </thead>
 <tbody>
 <tr>
-<td>1t</td>
-<td>bill</td>
-<td>30,000</td>
+<td>1</td>
+<td>patc</td>
+<td>42,000</td>
 </tr>
 <tr>
-<td>1t</td>
-<td>patc</td>
-<td>30,000</td>
+<td>2</td>
+<td>bill</td>
+<td>36,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>22,000</td>
+<td>26,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>20,000</td>
+<td>22,000</td>
 </tr>
 <tr>
 <td>5</td>
+<td>Norma1</td>
+<td>20,000</td>
+</tr>
+<tr>
+<td>6</td>
 <td>PaPaLarry</td>
 <td>14,000</td>
 </tr>
 <tr>
-<td>6</td>
-<td>Norma1</td>
-<td>12,000</td>
+<td>7</td>
+<td>Maryjean</td>
+<td>10,000</td>
 </tr>
 </tbody>
 </table>
