--- a/scores/index.html
+++ b/scores/index.html
@@ -409,6 +409,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -420,37 +462,37 @@
 </thead>
 <tbody>
 <tr>
-<td>1t</td>
-<td>bill</td>
-<td>44,000</td>
+<td>1</td>
+<td>patc</td>
+<td>54,000</td>
 </tr>
 <tr>
-<td>1t</td>
-<td>patc</td>
-<td>44,000</td>
+<td>2</td>
+<td>bill</td>
+<td>48,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>38,000</td>
+<td>40,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>28,000</td>
+<td>34,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Norma1</td>
-<td>18,000</td>
+<td>30,000</td>
 </tr>
 <tr>
-<td>6t</td>
+<td>6</td>
 <td>Maryjean</td>
-<td>14,000</td>
+<td>22,000</td>
 </tr>
 <tr>
-<td>6t</td>
+<td>7</td>
 <td>PaPaLarry</td>
 <td>14,000</td>
 </tr>
