--- a/index.html
+++ b/index.html
@@ -397,6 +397,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -410,27 +447,27 @@
 <tr>
 <td>1</td>
 <td>patc</td>
-<td>70,000</td>
+<td>78,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
-<td>58,000</td>
+<td>68,000</td>
 </tr>
 <tr>
-<td>3</td>
-<td>Nana_Sharon</td>
-<td>50,000</td>
-</tr>
-<tr>
-<td>4</td>
+<td>3t</td>
 <td>Maryjean</td>
-<td>44,000</td>
+<td>56,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>Nana_Sharon</td>
+<td>56,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>PaPaLarry</td>
-<td>36,000</td>
+<td>40,000</td>
 </tr>
 <tr>
 <td>6</td>
