--- a/index.html
+++ b/index.html
@@ -360,6 +360,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -373,17 +410,17 @@
 <tr>
 <td>1</td>
 <td>patc</td>
-<td>82,000</td>
+<td>90,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
-<td>78,000</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Maryjean</td>
-<td>64,000</td>
+<td>76,000</td>
 </tr>
 <tr>
 <td>4</td>
@@ -393,15 +430,15 @@
 <tr>
 <td>5</td>
 <td>Norma1</td>
-<td>42,000</td>
+<td>52,000</td>
 </tr>
 <tr>
-<td>6t</td>
+<td>6</td>
 <td>JoAnnmeme</td>
-<td>40,000</td>
+<td>46,000</td>
 </tr>
 <tr>
-<td>6t</td>
+<td>7</td>
 <td>PaPaLarry</td>
 <td>40,000</td>
 </tr>
